Bug 44172 - Basic function VAL produces bad result
Summary: Basic function VAL produces bad result
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
3.5.0 Beta2
Hardware: All All
: high critical
Assignee: August Sodora
URL:
Whiteboard:
Keywords: regression
: 44240 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-27 01:57 UTC by Francis Gueuning
Modified: 2012-01-05 11:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
This file contains a basic macro showing the bug when executed. (16.07 KB, application/vnd.oasis.opendocument.text)
2011-12-27 01:57 UTC, Francis Gueuning
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Francis Gueuning 2011-12-27 01:57:11 UTC
Created attachment 54839 [details]
This file contains a basic macro showing the bug when executed.

The basic function Val as not more a correct behavior 
   code                 display
msgbox(Val("1.23"))      1.231
msgbox(Val("1.11"))      1.111
msgbox(Val("11"))        1111
msgbox(Val("1.2"))       1.21
msgbox(Val("1"))         11

Tested on LOdev3.5.0 Beta2 Kubuntu 11.04
and on LOdev3.5.0 Beta0 Windows XP
Comment 1 Oliver Brinzing 2011-12-27 06:55:22 UTC
,
Comment 2 August Sodora 2012-01-04 22:46:49 UTC
*** Bug 44240 has been marked as a duplicate of this bug. ***