fdo#44172: Basic function VAL produces bad result

Signed-off-by: David Tardon <dtardon@redhat.com>